@startuml
hide empty description
[*] --> SpawningState
SpawningState --> DockingState

DockingState --> MovingState
DockingState --> HarvestingState
DockingState --> BuildingState

MovingState --> DockingState

HarvestingState --> StoringState
HarvestingState --> DockingState
HarvestingState --> RepairingState

BuildingState --> HarvestingState
BuildingState --> DockingState

StoringState --> HarvestingState
StoringState --> DockingState

RepairingState --> IdleState
RepairingState --> DockingState

IdleState --> HarvestingState
@enduml
